k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: ludo
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ghcr.io/ashwinkrishnaa29/ludo-gateway:latest
          ports:
            - containerPort: 4004
          readinessProbe:
            httpGet:
              path: /readyz
              port: 4004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ludo
spec:
  selector:
    app: gateway
  ports:
    - port: 4004
      targetPort: 4004
